# energy-etf-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: push-state-db.sh  restore-state-db.sh
.github/workflows/: backfill.yml  ci.yml  html-preview.yml  monthly-retrain.yml  nightly.yml  pages.yml
docs/: 01-overview-and-constraints.md  02-etf-universe.md  03-architecture.md  04-data-sources.md  05-prediction-methodology.md  06-roadmap.md  07-deployment.md  08-code-audit-and-optimization.md
models/: README.md  natgas_price_logistic.json  natgas_spread_logistic.json  rbob_price_logistic.json  rbob_spread_logistic.json  wti_price_logistic.json  wti_spread_logistic.json
src/energy_etf_monitor/: __init__.py  cli.py  commodities.py  config.py  etfs.py  quality_gate.py  records.py
tests/unit/: test_cftc_connector.py  test_cli.py  test_cme_parser.py  test_commodities.py  test_config.py  test_connector_fetch.py  test_crowding.py  test_crowding_repository.py  test_dashboard_data.py  test_eia_connector.py  test_etfs.py  test_feature_export.py  test_feature_pipeline_repository.py  test_fred_connector.py  test_fund_repository.py  test_gbm.py  test_gdelt_connector.py  test_ice_connector.py  test_invesco_connector.py  test_loader.py  test_modeling_artifacts.py  test_modeling_baselines.py  test_modeling_reports.py  test_monitoring.py  test_multi_commodity.py  test_news_alerts.py  test_news_classify.py  test_news_dedup.py  test_news_features.py  test_news_llm_classify.py  test_news_notify.py  test_news_repository.py  test_news_sources.py  (+14 more)
(+41 files in other folders)
