[project]
name = "energy-etf-monitor"
version = "0.1.0"
description = "Point-in-time energy ETF and futures monitoring pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "psycopg[binary]>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "sqlmodel>=0.0.22",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]
dashboard = [
    "streamlit>=1.39.0",
]

[project.scripts]
energy-etf-monitor = "energy_etf_monitor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_etf_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=energy_etf_monitor",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that exercise local services or external API boundaries",
]

[tool.coverage.run]
omit = ["src/energy_etf_monitor/dashboard/app.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
